[gd_scene load_steps=3 format=3 uid="uid://bnisb47qe61bq"]

[ext_resource type="Script" path="res://Abilities/Spell.gd" id="1"]

[sub_resource type="CircleShape2D" id="1"]
radius = 4.12311

[node name="SpellBody" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="TimeoutTimer" type="Timer" parent="."]
one_shot = true

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[node name="Texture" type="Polygon2D" parent="."]
color = Color(0, 0.529412, 1, 1)
polygon = PackedVector2Array(3, -3, 4, -1, 4, 1, 3, 3, 1, 4, -1, 4, -3, 3, -4, 1, -4, -1, -3, -3, -1, -4, 1, -4)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_SpellBody_body_entered"]
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_TimeoutTimer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
